# ford

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_THREE_ISSUES.md  ATTRIBUTIONS.md  AUDIO_INTEGRATION_COMPLETE.md  COMPLETION_SUMMARY_SHELL_AUDIO.md  DALLE_TEST_RESULTS_ANALYSIS.md  FIX_SUMMARY_CONDA_CONTRIBUTING.md  README.md  add_references.py  analyze_sprites.py  check_artifacts.py  check_format.py  check_m1_ids.py  check_references.py  check_sounds_complete.py  deep_content_check.py  deep_validate.py  dev.ps1  dev.sh  fix_all_ids.py  fix_schema.py  link_sounds_to_data.py  organize_sounds.py  pyproject.toml  rename_tasks.py  requirements-dev.txt  requirements.txt  validate_schema.py
.codex/: CODEX_EXECUTION_GUIDE.md  README.md  config.toml
.github/: copilot-instructions.md
SFX_TMP/: LICENSE.txt
audio/: README.md  catalog.json
codex_outputs/: master_inconsistency_report.md  phase0_dependency_graph.md  phase0_gap_master_plan.md  phase10_documentation_summary.md  phase11_implementation_roadmap.md  phase11_integration_dependency_graph.md  phase11_master_task_report.md  phase11_statistics.md  phase1_combat_formula_matrix.md  phase1_combat_inconsistencies.md  phase1_combat_recommendations.md  phase1_magic_tasks_summary.md  phase2_biome_tasks_summary.md  phase2_magic_inconsistencies.md  phase2_magic_reagent_matrix.md  phase2_magic_recommendations.md  phase3_economy_tasks_summary.md  phase3_progression_analysis.md  phase4_itemization_tasks_summary.md  phase4_items_loot_analysis.md  phase5_quest_tasks_summary.md  phase6_input_tasks_summary.md  phase7_audio_tasks_summary.md  phase8_tutorial_tasks_summary.md  phase9_localization_tasks_summary.md
data/: behaviors.json  blackboard_keys.json  combat_rules.json  factions.json  items.json  loot_tables.json  monsters.json  progression_rules.json  recipes.json  skills.json  spells.json  tactics.json
docs/: AI_DESIGN.md  AI_TESTPLAN.md  ARCHITECTURE.md  ARCHITECTURE_UO_ADDENDUM.md  ART_STYLE_GUIDE.md  ATTRIBUTIONS.md  AUDIO_SYSTEM.md  CODEX_VALIDATION_REPORT.md  COMBAT_RULES.md  CONTRIBUTING.md  GAMEPLAY.md  (+28 more)
(+356 files in other folders)
