[tool.poetry]
name = "ford"
version = "0.1.0"
description = "Single-player 2D dungeon crawler (prototype)"
authors = ["<your-name> <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.13.5,<4.0"
arcade = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^24.0"
ruff = "^0.21"
pre-commit = "^4.0"

[tool.poetry.scripts]
run = "game.main:main"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
