[tool.poetry]
name = "ford"
version = "0.1.0"
description = "Single-player 2D dungeon crawler (prototype)"
authors = ["Duly330AI"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
arcade = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-timeout = "^2.1"
black = "^24.0"
ruff = "^0.8"
pre-commit = "^4.0"

[tool.poetry.scripts]
run = "game.main:main"

[tool.pytest.ini_options]
# Timeout: kill tests that hang after 30 seconds
timeout = 30
# Timeout method: use thread (most reliable for pytest-timeout)
timeout_method = "thread"
# Markers for custom timeouts
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "timeout(seconds): override global timeout for specific test",
]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Verbose output
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
